Fixed Distorted IMGs; [WIP] Dynamic Footer

--- a/static/css/pci-timo.css
+++ b/static/css/pci-timo.css
@@ -182,6 +182,21 @@
         scroll-margin-top: 10rem;
     }
 
+    .footer-content a > img {
+        display: block;
+        width: 24rem;
+    }
+
+    .footer-content > ul {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: inherit;
+    }
+
+    .footer-content > ul > li {
+        width: 45%;
+    }
+
     .pci2-justify-center #pci-ArticleHeader .pci2-flex-center {
         margin-left: 1rem;
     }
@@ -463,7 +478,9 @@
         margin-left: 1.5rem;
     }
 
-    .footer-sub-text {
+    .footer-sub-text,
+    .pci-footer-ul,
+    .pci-footer-li {
         font-size: 1.5rem;
     }
 
@@ -496,7 +513,8 @@
         color: #3eaede;
     }
 
-    .grey-footer .footer-sub-text {
+    .grey-footer .footer-sub-text,
+    .grey-footer .pci-footer-ul {
         padding-top: 1rem;
         padding-bottom: 1rem;
     }
@@ -1001,6 +1019,10 @@
         margin-top: 2rem;
     }
 
+    .footer-content > ul > li {
+        width: 47%;
+    }
+
     #footer .flex-item {
         width: 50%;
     }
@@ -1066,10 +1088,19 @@
 
     .pci-infotext img {
         max-width: 70rem;
+        width: auto;
     }
 
     #pci-home-header {
         padding-top: 10rem;
+    }
+
+    .footer-content > ul > li {
+        width: 47%;
+    }
+
+    .footer-content > ul {
+        flex-direction: row;
     }
 }
 
